feat(testing): Improve instrumented test agent creation